@@ -1,5 +1,11 @@
 2016-12-18 Even Rouault <even.rouault at spatialys.com>
 
+	* libtiff/tif_getimage.c: fix potential memory leaks in error code
+	path of TIFFRGBAImageBegin().
+	Fixes http://bugzilla.maptools.org/show_bug.cgi?id=2627
+
+2016-12-18 Even Rouault <even.rouault at spatialys.com>
+
 	* tools/tiff2pdf.c: prevent heap-based buffer overflow in -j mode
 	on a paletted image. Note: this fix errors out before the overflow
 	happens. There could probably be a better fix.
